imagenes con enlaces y enlaces muertos

--- a/index1.html
+++ b/index1.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  <!-- TODO : control + [ = para agregar un tab a lo seleccionado-->
-  <!-- control + ] para quitar un tab a lo seleccionado-->
-  <!-- alt + z para hacer que todo quepa en la misma pantalla-->
-  <!-- control + / para comentar lo seleccionado -->
+  
+  
+  
+  
   </head>
   <body>
     <h2>AppdeGatos</h2>
     <main>      
       <h3>Imagenes de Gatos:</h3>
-      <!-- target nos permite especificar si queremos abrir ese enlace en la misma pagina o una nueva pestana -->
-      <!-- rel y ese valor de atributo permite prevenir tabnabbing -->
-      <p>Haz click aqui para ver mas <a href="https://www.youtube.com/watch?v=XqFR2lqBYPs" target="_blank" rel="noopener noreferrer"> imagenes de gatos </a></p>
-      <!-- alt permite darle una alternativa en caso no se pueda abrir la imagen -->
-      <img src="https://sep.yimg.com/ty/cdn/entirelypets/relax-cat-image1.jpg" alt="un lindo gato naranja recostado sobre su espalda">
-      <!-- Indice -->
-      <a href="#parrafo-1">Parrafo 2</a>
-      <a href="#parrafo-2">Parrafo 3</a>
-      <a href="#parrafo-3">Parrafo 4</a>
+      
+      <!-- cuando dejamos # el enlace no lleva a ningun lugar -->
+      <p>Haz click aqui para ver mas <a href="#" target="_blank" rel="noopener noreferrer"> imagenes de gatos </a></p>
+      <!-- Crear enlaces a partir de imagenes -->
+      <a href="#" target="_blank"><img src="https://sep.yimg.com/ty/cdn/entirelypets/relax-cat-image1.jpg" alt="un lindo gato naranja recostado sobre su espalda"></a>
+
       <img src="imagenes/pizza.jpg" alt="pizza"> 
       <h3 id="parrafo-1">Parrafo 2</h3>
       <p>
