forms-labels-botones

--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-  
-  
-  
-  
   </head>
   <body>
     <h2>AppdeGatos</h2>
@@ -14,7 +10,10 @@
       <!-- cuando dejamos # el enlace no lleva a ningun lugar -->
       <p>Haz click aqui para ver mas <a href="#" target="_blank" rel="noopener noreferrer"> imagenes de gatos </a></p>
       <!-- Crear enlaces a partir de imagenes -->
-      <a href="#" target="_blank"><img src="https://sep.yimg.com/ty/cdn/entirelypets/relax-cat-image1.jpg" alt="un lindo gato naranja recostado sobre su espalda"></a>
+      <!-- ALT es para que escribamos un comentario cuando no cargue la imagen -->
+      <a href="#" target="_blank">
+        <img src="https://sep.yimg.com/ty/cdn/entirelypets/relax-cat-image1.jpg" alt="un lindo gato naranja recostado sobre su espalda">
+      </a>
 
       <img src="imagenes/pizza.jpg" alt="pizza"> 
       <h3 id="parrafo-1">Parrafo 2</h3>
