--- a/listas.html
+++ b/listas.html
@@ -9,7 +9,9 @@
     <main>      
       <h3>Imagenes de Gatos:</h3>
       <p>Haz click aqui para ver mas <a href="#" target="_blank" rel="noopener noreferrer"> imagenes de gatos </a></p>
-      <a href="#" target="_blank"><img src="https://sep.yimg.com/ty/cdn/entirelypets/relax-cat-image1.jpg" alt="un lindo gato naranja recostado sobre su espalda"></a>
+      <a href="#" target="_blank">
+        <img src="https://sep.yimg.com/ty/cdn/entirelypets/relax-cat-image1.jpg" alt="un lindo gato naranja recostado sobre su espalda">
+      </a>
 
       
       <h3>Listas  de Gatos</h3>
