--- a/index5.html
+++ b/index5.html
@@ -3,10 +3,22 @@
   <!-- Metada: elementos que no vemos, archvios css, js lo ruteamos en el head, personalizar titulo-->
   <head>
   <title>AppdeGatos</title>
-    
+  <style>
+    h2{
+      color: blue;
+    }
+
+    h3{
+      color: green;
+    }
+    p{
+      color: purple;
+    }
+  </style>
   </head>
   <body>
-    <h2>AppdeGatos</h2>
+    <!-- estilo en linea CSS -->
+    <h2 style="color:blue">AppdeGatos</h2>
     <main>      
       <h3>Imagenes de Gatos:</h3>
       <p>Haz click aqui para ver mas <a href="#" target="_blank" rel="noopener noreferrer"> imagenes de gatos </a></p>
