--- a/index5.html
+++ b/index5.html
@@ -2,19 +2,9 @@
 <html lang="es">
   <!-- Metada: elementos que no vemos, archvios css, js lo ruteamos en el head, personalizar titulo-->
   <head>
-  <title>AppdeGatos</title>
-  <style>
-    h2{
-      color: blue;
-    }
-
-    h3{
-      color: green;
-    }
-    p{
-      color: purple;
-    }
-  </style>
+    <title>AppdeGatos</title>
+    <!-- conectar ambos archivos -->
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <!-- estilo en linea CSS -->
